# semspect-neo4j-init

./: README.md  example.py  init_semspect.py  pyproject.toml
