[tool.poetry]
name = "init_semspect"
version = "0.1.0"
description = ""
authors = ["mo <opitz@derivo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^4.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
init_semspect = "init_semspect:main"

