[tool.poetry]
name = "init_semspect"
version = "0.1.0"
description = ""
authors = ["Michael Opitz <opitz@derivo.de>", "Thorsten Liebig <liebig@derivo.de>", "Vincent Vialard <vialard@derivo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^4.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run_example = "example:main"

