[tool.poetry]
name = "semspect-neo4j-init"
version = "1.0.0"
description = ""
authors = ["Michael Opitz <opitz@derivo.de>", "Thorsten Liebig <liebig@derivo.de>", "Vincent Vialard <vialard@derivo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run_example = "example:main"

